@@ -1,0 +1,9 @@
+config BR2_PACKAGE_CCACHE
+	bool "ccache"
+	help
+	  ccache is a compiler cache. It speeds up recompilation by
+	  caching previous compilations and detecting when the same
+	  compilation is being done again
+
+	  http://samba.ccache.org
+
